src/pages/contacts/ContactsPage.module.scss
/* ... */
.more-icon {
  height: 30px;
  width: 30px;
  display: flex;
  justify-content: center;
  align-items: center;

  &:hover {
    background: #f4f6fa;

    svg > path {
      stroke: #0052ce;
    }
  }

  &[class*="opened"] {
    background: #ebeff6;

    svg > path {
      stroke: #002d72;
    }
  }
}

.reset-partial-duplicates {
  @media (max-width: 480px) {
    display: none;
  }

  @media (max-width: 768px) {
    width: auto;
    min-height: auto;
  }
  height: 20px;
  display: flex;
  align-items: center;
  min-height: 40px;
  background: #ffffffbf;
  border: 1px solid #dfe5ef;
  box-sizing: border-box;
  border-radius: 4px;
  margin-top: 8px;
  font-size: 16px;
  line-height: 19px;
  color: #3d4553;
  justify-content: space-between;

  .duplicate-found {
    padding-left: 16px;
  }

  .colorAndCount {
    align-items: center;
    display: flex;
    width: 20%;
    height: 100%;
  }
  .statusColor {
    width: 5%;
    height: 100%;
  }
  .reset-close {
    display: flex;
    margin: 0px 12px;
  }
}
/* ... */

